# commande_systeme_robotique

./: README.md
modele_geometrique/: mecanisme-4-barres-augmente.mw
modele_geometrique/matlab/: param.m  script.m
workspace/TPEtherCAT/: ._CMakeLists.txt  CMakeLists.txt
workspace/TPEtherCAT/cmake/modules/: FindEtherCAT.cmake  FindXenomai.cmake
workspace/TPEtherCAT/cmake/modules/old_backup/: FindXenomai.cmake
workspace/TPEtherCAT/src/: CMakeLists.txt  main.c  main.c~  main.h
workspace/TPExo1/src/: main.c
workspace/TPExo2/: CMakeLists.txt
workspace/TPExo2/src/: main.c
